--- a/container-build/Containerfile
+++ b/container-build/Containerfile
@@ -1,2 +1,19 @@
 # Use the httpd-parent image as base
 FROM quay.io/redhattraining/httpd-parent
+
+ONBUILD /src /var/www/html
+
+LABEL io.openshift.expose-services="8080:http" \
+      io.openshift.tags="httpd, apache"
+
+
+RUN sed -i 's/Listen 80/Listen 8080/g' /etc/httpd/conf/httpd.conf && \
+    sed -i 's/#ServerName www.example.com:80/ServerName 0.0.0.0:8080/g' /etc/httpd/conf/httpd.conf
+
+RUN chgrp -R 0 /var/run/httpd /var/log/httpd && \
+    chmod -R g=u /var/run/httpd /var/log/ht
+
+EXPOSE 8080
+USER 1001
+
+      
