--- a/container-build/Containerfile
+++ b/container-build/Containerfile
@@ -11,7 +11,7 @@ RUN sed -i 's/Listen 80/Listen 8080/g' /etc/httpd/conf/httpd.conf && \
     sed -i 's/#ServerName www.example.com:80/ServerName 0.0.0.0:8080/g' /etc/httpd/conf/httpd.conf
 
 RUN chgrp -R 0 /var/run/httpd /var/log/httpd && \
-    chmod -R g=u /var/run/httpd /var/log/ht
+    chmod -R g=u /var/run/httpd /var/log/httpd
 
 EXPOSE 8080
 USER 1001
